[cicd] - 배포시 cors 에러 해결